# td

./: .gitignore  LICENSE  Makefile  README.md  dev-install.sh  install-remote.sh  install.sh  pyproject.toml  settings.json  settings.sh  td  test_todo.sh  todo
.github/workflows/: update-homebrew.yml
commands/: td.md
hooks/: pre-compact
lib/todo/: commands.sh  config.sh  data.sh  git.sh  session.sh  ui.sh
src/td_cli/: __main__.py  calendar_view.py  cli.py  config.py  data.py  git.py  session.py  ui.py  version_check.py  weekly.py
tests/: conftest.py  test_commands.py  test_data.py
