[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "td"
dynamic = ["version"]
description = "Minimal task manager for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "rich>=14",
    "iterfzf>=1.4",
]

[project.scripts]
td = "td_cli.cli:app"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/td_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
